WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263028
[iOS] Smooth keyboard scrolling animates in the wrong direction when pressing ↓ after scrolling up
https://bugs.webkit.org/show_bug.cgi?id=263028
Summary
[iOS] Smooth keyboard scrolling animates in the wrong direction when pressing...
Wenson Hsieh
Reported
2023-10-11 11:56:08 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-10-11 11:56:27 PDT
(Not a recent regression from ToT work — reproduces on stock iOS 17 as well)
Radar WebKit Bug Importer
Comment 2
2023-10-11 12:18:56 PDT
<
rdar://problem/116823122
>
Wenson Hsieh
Comment 3
2023-10-11 12:21:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18954
EWS
Comment 4
2023-10-11 14:12:42 PDT
Committed
269219@main
(9dcecd144778): <
https://commits.webkit.org/269219@main
> Reviewed commits have been landed. Closing PR #18954 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug